# crow-server-template

./: .gitmodules  CMakeLists.txt  install.sh  required_pkgs.txt
src/: CMakeLists.txt  database.cpp  database.hpp  defs.h  main.cpp  schema.sql  server.cpp
